feat: enhance chat handler with app secret and agent ID support, improve application agent caching

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,7 @@
             "program": "${workspaceFolder}/cmd/server/main.go",
             "cwd": "${workspaceFolder}",
             "env": {},
-            "args": [
-                "-config",
-                "configs/config.yaml"
-            ]
+            "args": []
         }
     ]
 }
